--- a/main.html
+++ b/main.html
@@ -10,7 +10,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+   <h1>Why I want to become a developer?</h1>
+	<p>
+		I want to become a software developer for many reasons. 
+		I see value in being able to contribute to the field of technology.
+		Technology is Interesting, hence it keeps me motivated to learn different domains of technology.
+        By becoming a software developer, I'd be able to accomplish my parents expectations from me.
+	</p>
 </body>
 
 </html>
